Integrated New Observer Diagrams Panel